--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "prettier": "prettier --write .",
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
     "next": "14.0.3",
@@ -37,6 +39,9 @@
     "@storybook/nextjs": "^7.5.3",
     "@storybook/react": "^7.5.3",
     "@storybook/testing-library": "^0.2.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -48,12 +53,17 @@
     "eslint-config-prettier": "latest",
     "eslint-import-resolver-typescript": "latest",
     "eslint-plugin-import": "latest",
+    "eslint-plugin-jest-dom": "^5.0.2",
+    "eslint-plugin-testing-library": "^6.0.0",
     "eslint-plugin-no-loops": "latest",
     "eslint-plugin-prettier": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
     "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.3",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
+    "ts-jest": "^29.1.1",
     "prettier": "latest",
     "storybook": "^7.5.3",
     "typescript": "^5"
