--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.2",
     "@commitlint/config-conventional": "^18.4.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "@storybook/addon-essentials": "^7.5.3",
     "@storybook/addon-interactions": "^7.5.3",
     "@storybook/addon-links": "^7.5.3",
@@ -65,6 +66,8 @@
     "jest-environment-jsdom": "^29.6.2",
     "ts-jest": "^29.1.1",
     "prettier": "latest",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
     "storybook": "^7.5.3",
     "typescript": "^5"
   }
