--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@storybook/addon-interactions": "^7.5.3",
     "@storybook/addon-links": "^7.5.3",
     "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-styling-webpack": "^0.0.5",
     "@storybook/blocks": "^7.5.3",
     "@storybook/nextjs": "^7.5.3",
     "@storybook/react": "^7.5.3",
@@ -49,26 +50,29 @@
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.8.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "eslint-config-prettier": "latest",
     "eslint-import-resolver-typescript": "latest",
     "eslint-plugin-import": "latest",
     "eslint-plugin-jest-dom": "^5.0.2",
-    "eslint-plugin-testing-library": "^6.0.0",
     "eslint-plugin-no-loops": "latest",
     "eslint-plugin-prettier": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
     "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-testing-library": "^6.0.0",
     "husky": "^8.0.3",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
-    "ts-jest": "^29.1.1",
     "prettier": "latest",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
+    "sass-loader": "^13.3.2",
     "storybook": "^7.5.3",
+    "style-loader": "^3.3.3",
+    "ts-jest": "^29.1.1",
     "typescript": "^5"
   }
 }
