--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "greenspark",
   "version": "0.1.0",
   "private": true,
+  "author": "Ahmet Ozbey",
+  "license": "MIT",
   "engines": {
     "node": ">=14.0.0",
     "yarn": ">=1.22.0",
@@ -23,9 +25,12 @@
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
+    "addon-redux": "^2.0.11",
+    "axios": "^1.6.2",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "sass": "^1.69.5"
   },
   "devDependencies": {
